# polymer-growth

./: .gitignore  AUDIT_PROMPT.md  BASELINE_BENCHMARKS.md  DECISIONS.md  DEFINITIVE_ANALYSIS.md  ENGINEERING_LOG.md  FINAL_AUDIT_PROMPT.md  METHODOLOGY.md  NEED_TO_FIX.md  OPEN_QUESTIONS.md  README.md  REPRODUCIBILITY_PROTOCOL.md  UX_QUESTIONNAIRE.md  claudePivot.txt  claude_command.txt  pyproject.toml  thesis.txt
docs/: PROJECT_STATUS.md  RESULTS_ANALYSIS.md  legacy_reproduce.py  thesis.txt
program code/: GA_base.py  GA_base_NN.py  GA_base_NN_2.py  GA_paretto.py  Manual.docx  NN.py  co_evolution.py  cross_island_breeding_GA.py  data_generator.py  distributionComparison.py  evolutionaryAlgorithm.py  fddc.py  island_GA.py  matlab_simulation.py  show_population.py  simulation.py  test screenshot.py  tester.py  txt_to_excel.py  user_interface.py
program code/Data/: 10k no BB.xlsx  110k no BB.xlsx  20k no BB.xlsx  30k no BB.xlsx  40k no BB.xlsx  50k no BB.xlsx  5k no BB.xlsx  70k no BB.xlsx
program code/__pycache__/: GA_base.cpython-36.pyc.1609757586896
program code/fakeData/: sim_val0  sim_val1  sim_val10  sim_val100  sim_val11  sim_val12  sim_val13  sim_val14  sim_val15  sim_val16  sim_val17  sim_val18  sim_val19  sim_val2  sim_val20  sim_val21  sim_val22  sim_val23  sim_val24  sim_val25  sim_val26  sim_val27  sim_val28  sim_val29  sim_val3  sim_val30  (+75 more)
scripts/: make_presentation.py
standalone_prototypes/: MEETING_SUMMARY.md  cpu_core_selector.py  model_comparison.py  task_queue.py
tests/: __init__.py  test_integration.py  test_objective.py  test_simulation.py
(+52 files in other folders)
