[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymer-growth"
version = "0.1.0"
description = "Stochastic polymer growth simulation and parameter optimization"
authors = [{name = "Kaan Basaran"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=1.5,<3.0",
    "matplotlib>=3.7,<4.0",
    "scipy>=1.10,<2.0",
    "numba>=0.56,<1.0",
    "pyyaml>=6.0",
    "click>=8.1,<9.0",
    "PySide6>=6.4",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "black>=23.0",
    "ipython>=8.0",
]

[project.scripts]
polymer-sim = "polymer_growth.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=polymer_growth --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.coverage.run]
source = ["src/polymer_growth"]
omit = ["*/tests/*", "*/gui/*"]  # GUI tested manually

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]